@@ -1,1 +1,1 @@
-{"count":1,"self":68.623481599999991,"total":69.448685,"children":{"InitializeActuators":{"count":4,"self":0.004822,"total":0.004822,"children":null},"InitializeSensors":{"count":4,"self":0.012239,"total":0.012239,"children":null},"AgentSendState":{"count":26083,"self":0.110428,"total":0.297297,"children":{"CollectObservations":{"count":2610,"self":0.133569,"total":0.133569,"children":null},"WriteActionMask":{"count":2610,"self":0.009044,"total":0.009044,"children":null},"RequestDecision":{"count":2610,"self":0.037252,"total":0.044256,"children":{"RayPerceptionSensor.Perceive":{"count":2610,"self":0.007004,"total":0.007004,"children":null}}}}},"DecideAction":{"count":26083,"self":0.085868,"total":0.085868,"children":null},"AgentAct":{"count":26083,"self":0.424948,"total":0.424948,"children":null},"RayPerceptionSensor.Perceive":{"count":2,"self":1.4E-05,"total":1.4E-05,"children":null}},"gauges":{"CurriculumSPFencerBehavior.CumulativeReward":{"count":2,"max":0.232359,"min":0.232175872,"runningAverage":0.232267439,"value":0.232359,"weightedAverage":0.232221663}},"metadata":{"timer_format_version":"0.1.0","start_time_seconds":"1648192873","unity_version":"2021.2.7f1","command_line_arguments":"\/Applications\/Unity\/Hub\/Editor\/2021.2.7f1\/Unity.app\/Contents\/MacOS\/Unity -projectpath \/Users\/qloh\/Projects\/Fencing VR Redo -useHub -hubIPC -cloudEnvironment production -licensingIpc LicenseClient-qloh -hubSessionId c6add000-a635-11ec-b0b4-fbf6c1f9913d -accessToken tAWkk-dF1BLsOtZrH3NrMNcfQIDHer5uVAJ-w5vf2pA011f","communication_protocol_version":"1.5.0","com.unity.ml-agents_version":"2.0.1","scene_name":"Action Space Scene","end_time_seconds":"1648192942"}}
+{"count":1,"self":5229.8473472,"total":5268.24961,"children":{"InitializeActuators":{"count":14,"self":0.0082969999999999988,"total":0.0082969999999999988,"children":null},"InitializeSensors":{"count":14,"self":0.033696,"total":0.033696,"children":null},"AgentSendState":{"count":1499946,"self":7.7424016,"total":13.236913,"children":{"CollectObservations":{"count":84680,"self":3.5951168,"total":3.5951169999999997,"children":null},"WriteActionMask":{"count":84680,"self":0.323262,"total":0.323262,"children":null},"RequestDecision":{"count":84680,"self":1.28352,"total":1.5761319999999999,"children":{"RayPerceptionSensor.Perceive":{"count":84680,"self":0.292612,"total":0.292612,"children":null}}}}},"DecideAction":{"count":1499946,"self":5.5404672,"total":5.540467,"children":null},"AgentAct":{"count":1499946,"self":19.5825376,"total":19.582942,"children":{"RayPerceptionSensor.Perceive":{"count":78,"self":0.000405,"total":0.000405,"children":null}}},"RayPerceptionSensor.Perceive":{"count":5,"self":2.8E-05,"total":2.8E-05,"children":null}},"gauges":{"CurriculumSPFencerBehavior.CumulativeReward":{"count":82,"max":0.9626035,"min":0,"runningAverage":0.5428459,"value":0.962153435,"weightedAverage":0.8887728}},"metadata":{"timer_format_version":"0.1.0","start_time_seconds":"1648198322","unity_version":"2021.2.7f1","command_line_arguments":"\/Applications\/Unity\/Hub\/Editor\/2021.2.7f1\/Unity.app\/Contents\/MacOS\/Unity -projectpath \/Users\/qloh\/Projects\/Fencing VR Redo -useHub -hubIPC -cloudEnvironment production -licensingIpc LicenseClient-qloh -hubSessionId c6add000-a635-11ec-b0b4-fbf6c1f9913d -accessToken tAWkk-dF1BLsOtZrH3NrMNcfQIDHer5uVAJ-w5vf2pA011f","communication_protocol_version":"1.5.0","com.unity.ml-agents_version":"2.0.1","scene_name":"Action Space Scene","end_time_seconds":"1648203591"}}
