@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:e0642db8d4dd4af35083e259caecfaa4a23819d42ff5ba6f27120db78ce4bd4a
-size 240384
+oid sha256:3ce912f4f8f5e89e4f663d51314705734c78376b23ed42a75ff18d60ace23666
+size 234364
