@@ -86,7 +86,7 @@ public class TrainingEnv : NewGameController
         {
             var xRandCoef = Academy.Instance.EnvironmentParameters.GetWithDefault("start_point_x_rand_coef", 0);
             var zRandCoef = Academy.Instance.EnvironmentParameters.GetWithDefault("start_point_z_rand_coef", 0);
-            var footworkEnabled = Academy.Instance.EnvironmentParameters.GetWithDefault("footwork_enabled", 0) > 0;
+            var footworkEnabled = Academy.Instance.EnvironmentParameters.GetWithDefault("footwork_enabled", 1) > 0;
             
             var rand = UnityEngine.Random.insideUnitSphere;
             rand.x *= xRand * xRandCoef;
